release/rosmod_v0.2/ros_tools/grammar/01-Workspace/ROSParser.py
# Generated from java-escape by ANTLR 4.4
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .ROSListener import ROSListener
else:
    from ROSListener import ROSListener

class ROSParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    EOF = Token.EOF
    T__29=1
    T__28=2
    T__27=3
    T__26=4
    T__25=5
    T__24=6
    T__23=7
    T__22=8
    T__21=9
    T__20=10
    T__19=11
    T__18=12
    T__17=13
    T__16=14
    T__15=15
    T__14=16
    T__13=17
    T__12=18
    T__11=19
    T__10=20
    T__9=21
    T__8=22
    T__7=23
    T__6=24
    T__5=25
    T__4=26
    T__3=27
    T__2=28
    T__1=29
    T__0=30
    ID=31
    INT=32
    DOUBLE=33
    BOOL=34
    WS=35
    COMMENT=36
    LINE_COMMENT=37

    tokenNames = [ u"<INVALID>", u"'component'", u"'request'", u"']'", u"'msg'", 
                   u"'['", u"'node'", u"'s'", u"'<'", u"'messages'", u"'services'", 
                   u"'publisher'", u"'package'", u"'subscriber'", u"'{'", 
                   u"'provides'", u"'us'", u"'components'", u"'}'", u"'='", 
                   u"'requires'", u"';'", u"'nodes'", u"'timer'", u"'response'", 
                   u"'>'", u"'period'", u"'srv'", u"'/'", u"'ms'", u"'ns'", 
                   u"ID", u"INT", u"DOUBLE", u"BOOL", u"WS", u"COMMENT", 
                   u"LINE_COMMENT" ]

    RULE_start = 0
    RULE_ros_packages = 1
    RULE_package_name = 2
    RULE_messages = 3
    RULE_ros_msg = 4
    RULE_msg_name = 5
    RULE_msg_field = 6
    RULE_msg_field_type = 7
    RULE_msg_field_name = 8
    RULE_msg_field_value = 9
    RULE_services = 10
    RULE_ros_srv = 11
    RULE_srv_name = 12
    RULE_request = 13
    RULE_req_argument = 14
    RULE_response = 15
    RULE_res_argument = 16
    RULE_req_field_type = 17
    RULE_req_field_name = 18
    RULE_req_field_value = 19
    RULE_res_field_type = 20
    RULE_res_field_name = 21
    RULE_res_field_value = 22
    RULE_components = 23
    RULE_ros_component = 24
    RULE_component_name = 25
    RULE_ros_client_server = 26
    RULE_service_name = 27
    RULE_ros_pub_sub = 28
    RULE_publisher = 29
    RULE_subscriber = 30
    RULE_topic = 31
    RULE_ros_timer = 32
    RULE_timer_name = 33
    RULE_timer_period = 34
    RULE_period_unit = 35
    RULE_nodes = 36
    RULE_ros_node = 37
    RULE_node_name = 38
    RULE_component_instances = 39
    RULE_component_type = 40
    RULE_component_instance = 41

    ruleNames =  [ u"start", u"ros_packages", u"package_name", u"messages", 
                   u"ros_msg", u"msg_name", u"msg_field", u"msg_field_type", 
                   u"msg_field_name", u"msg_field_value", u"services", u"ros_srv", 
                   u"srv_name", u"request", u"req_argument", u"response", 
                   u"res_argument", u"req_field_type", u"req_field_name", 
                   u"req_field_value", u"res_field_type", u"res_field_name", 
                   u"res_field_value", u"components", u"ros_component", 
                   u"component_name", u"ros_client_server", u"service_name", 
                   u"ros_pub_sub", u"publisher", u"subscriber", u"topic", 
                   u"ros_timer", u"timer_name", u"timer_period", u"period_unit", 
                   u"nodes", u"ros_node", u"node_name", u"component_instances", 
                   u"component_type", u"component_instance" ]

    def __init__(self, input):
        super(ROSParser, self).__init__(input)
        self.checkVersion("4.4")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSParser.StartContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ROSParser.EOF, 0)

        def ros_packages(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSParser.Ros_packagesContext)
            else:
                return self.getTypedRuleContext(ROSParser.Ros_packagesContext,i)


        def getRuleIndex(self):
            return ROSParser.RULE_start

        def enterRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.enterStart(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.exitStart(self)




    def start(self):

        localctx = ROSParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 84 
                self.ros_packages()
                self.state = 87 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ROSParser.T__18):
                    break

            self.state = 89
            self.match(self.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Ros_packagesContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSParser.Ros_packagesContext, self).__init__(parent, invokingState)
            self.parser = parser

        def components(self):
            return self.getTypedRuleContext(ROSParser.ComponentsContext,0)


        def nodes(self):
            return self.getTypedRuleContext(ROSParser.NodesContext,0)


        def package_name(self):
            return self.getTypedRuleContext(ROSParser.Package_nameContext,0)


        def services(self):
            return self.getTypedRuleContext(ROSParser.ServicesContext,0)


        def messages(self):
            return self.getTypedRuleContext(ROSParser.MessagesContext,0)


        def getRuleIndex(self):
            return ROSParser.RULE_ros_packages

        def enterRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.enterRos_packages(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.exitRos_packages(self)




    def ros_packages(self):

        localctx = ROSParser.Ros_packagesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ros_packages)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(self.T__18)
            self.state = 92 
            self.package_name()
            self.state = 93
            self.match(self.T__16)
            self.state = 95
            _la = self._input.LA(1)
            if _la==ROSParser.T__21:
                self.state = 94 
                self.messages()


            self.state = 98
            _la = self._input.LA(1)
            if _la==ROSParser.T__20:
                self.state = 97 
                self.services()


            self.state = 100 
            self.components()

            self.state = 101 
            self.nodes()
            self.state = 102
            self.match(self.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Package_nameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSParser.Package_nameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ROSParser.ID, 0)

        def getRuleIndex(self):
            return ROSParser.RULE_package_name

        def enterRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.enterPackage_name(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.exitPackage_name(self)




    def package_name(self):

        localctx = ROSParser.Package_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_package_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(self.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MessagesContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSParser.MessagesContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ros_msg(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSParser.Ros_msgContext)
            else:
                return self.getTypedRuleContext(ROSParser.Ros_msgContext,i)


        def getRuleIndex(self):
            return ROSParser.RULE_messages

        def enterRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.enterMessages(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.exitMessages(self)




    def messages(self):

        localctx = ROSParser.MessagesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_messages)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(self.T__21)
            self.state = 107
            self.match(self.T__16)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSParser.T__26:
                self.state = 108 
                self.ros_msg()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.match(self.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Ros_msgContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSParser.Ros_msgContext, self).__init__(parent, invokingState)
            self.parser = parser

        def msg_field(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSParser.Msg_fieldContext)
            else:
                return self.getTypedRuleContext(ROSParser.Msg_fieldContext,i)


        def msg_name(self):
            return self.getTypedRuleContext(ROSParser.Msg_nameContext,0)


        def getRuleIndex(self):
            return ROSParser.RULE_ros_msg

        def enterRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.enterRos_msg(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.exitRos_msg(self)




    def ros_msg(self):

        localctx = ROSParser.Ros_msgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ros_msg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(self.T__26)
            self.state = 117 
            self.msg_name()
            self.state = 118
            self.match(self.T__16)
            self.state = 120 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 119 
                self.msg_field()
                self.state = 122 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ROSParser.ID):
                    break

            self.state = 124
            self.match(self.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Msg_nameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSParser.Msg_nameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ROSParser.ID, 0)

        def getRuleIndex(self):
            return ROSParser.RULE_msg_name

        def enterRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.enterMsg_name(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.exitMsg_name(self)




    def msg_name(self):

        localctx = ROSParser.Msg_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_msg_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(self.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Msg_fieldContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSParser.Msg_fieldContext, self).__init__(parent, invokingState)
            self.parser = parser

        def msg_field_type(self):
            return self.getTypedRuleContext(ROSParser.Msg_field_typeContext,0)


        def msg_field_name(self):
            return self.getTypedRuleContext(ROSParser.Msg_field_nameContext,0)


        def msg_field_value(self):
            return self.getTypedRuleContext(ROSParser.Msg_field_valueContext,0)


        def getRuleIndex(self):
            return ROSParser.RULE_msg_field

        def enterRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.enterMsg_field(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.exitMsg_field(self)




    def msg_field(self):

        localctx = ROSParser.Msg_fieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_msg_field)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128 
            self.msg_field_type()
            self.state = 129 
            self.msg_field_name()
            self.state = 132
            _la = self._input.LA(1)
            if _la==ROSParser.T__11:
                self.state = 130
                self.match(self.T__11)
                self.state = 131 
                self.msg_field_value()


            self.state = 134
            self.match(self.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Msg_field_typeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSParser.Msg_field_typeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i=None):
            if i is None:
                return self.getTokens(ROSParser.INT)
            else:
                return self.getToken(ROSParser.INT, i)

        def ID(self, i=None):
            if i is None:
                return self.getTokens(ROSParser.ID)
            else:
                return self.getToken(ROSParser.ID, i)

        def getRuleIndex(self):
            return ROSParser.RULE_msg_field_type

        def enterRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.enterMsg_field_type(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.exitMsg_field_type(self)




    def msg_field_type(self):

        localctx = ROSParser.Msg_field_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_msg_field_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(self.ID)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSParser.T__2:
                self.state = 137
                self.match(self.T__2)
                self.state = 138
                self.match(self.ID)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSParser.T__25:
                self.state = 144
                self.match(self.T__25)
                self.state = 146
                _la = self._input.LA(1)
                if _la==ROSParser.INT:
                    self.state = 145
                    self.match(self.INT)


                self.state = 148
                self.match(self.T__27)
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Msg_field_nameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSParser.Msg_field_nameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ROSParser.ID, 0)

        def getRuleIndex(self):
            return ROSParser.RULE_msg_field_name

        def enterRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.enterMsg_field_name(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.exitMsg_field_name(self)




    def msg_field_name(self):

        localctx = ROSParser.Msg_field_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_msg_field_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(self.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Msg_field_valueContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSParser.Msg_field_valueContext, self).__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(ROSParser.BOOL, 0)

        def INT(self):
            return self.getToken(ROSParser.INT, 0)

        def ID(self):
            return self.getToken(ROSParser.ID, 0)

        def DOUBLE(self):
            return self.getToken(ROSParser.DOUBLE, 0)

        def getRuleIndex(self):
            return ROSParser.RULE_msg_field_value

        def enterRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.enterMsg_field_value(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.exitMsg_field_value(self)




    def msg_field_value(self):

        localctx = ROSParser.Msg_field_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_msg_field_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << self.ID) | (1 << self.INT) | (1 << self.DOUBLE) | (1 << self.BOOL))) != 0)):
                self._errHandler.recoverInline(self)
            self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ServicesContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSParser.ServicesContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ros_srv(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSParser.Ros_srvContext)
            else:
                return self.getTypedRuleContext(ROSParser.Ros_srvContext,i)


        def getRuleIndex(self):
            return ROSParser.RULE_services

        def enterRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.enterServices(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.exitServices(self)




    def services(self):

        localctx = ROSParser.ServicesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_services)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(self.T__20)
            self.state = 159
            self.match(self.T__16)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSParser.T__3:
                self.state = 160 
                self.ros_srv()
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 166
            self.match(self.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Ros_srvContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSParser.Ros_srvContext, self).__init__(parent, invokingState)
            self.parser = parser

        def srv_name(self):
            return self.getTypedRuleContext(ROSParser.Srv_nameContext,0)


        def request(self):
            return self.getTypedRuleContext(ROSParser.RequestContext,0)


        def response(self):
            return self.getTypedRuleContext(ROSParser.ResponseContext,0)


        def getRuleIndex(self):
            return ROSParser.RULE_ros_srv

        def enterRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.enterRos_srv(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.exitRos_srv(self)




    def ros_srv(self):

        localctx = ROSParser.Ros_srvContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ros_srv)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(self.T__3)
            self.state = 169 
            self.srv_name()
            self.state = 170
            self.match(self.T__16)

            self.state = 171 
            self.request()

            self.state = 172 
            self.response()
            self.state = 173
            self.match(self.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Srv_nameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSParser.Srv_nameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ROSParser.ID, 0)

        def getRuleIndex(self):
            return ROSParser.RULE_srv_name

        def enterRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.enterSrv_name(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.exitSrv_name(self)




    def srv_name(self):

        localctx = ROSParser.Srv_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_srv_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(self.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RequestContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSParser.RequestContext, self).__init__(parent, invokingState)
            self.parser = parser

        def req_argument(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSParser.Req_argumentContext)
            else:
                return self.getTypedRuleContext(ROSParser.Req_argumentContext,i)


        def getRuleIndex(self):
            return ROSParser.RULE_request

        def enterRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.enterRequest(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.exitRequest(self)




    def request(self):

        localctx = ROSParser.RequestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_request)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(self.T__28)
            self.state = 178
            self.match(self.T__16)
            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSParser.ID:
                self.state = 179 
                self.req_argument()
                self.state = 184
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 185
            self.match(self.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Req_argumentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSParser.Req_argumentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def req_field_value(self):
            return self.getTypedRuleContext(ROSParser.Req_field_valueContext,0)


        def req_field_type(self):
            return self.getTypedRuleContext(ROSParser.Req_field_typeContext,0)


        def req_field_name(self):
            return self.getTypedRuleContext(ROSParser.Req_field_nameContext,0)


        def getRuleIndex(self):
            return ROSParser.RULE_req_argument

        def enterRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.enterReq_argument(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.exitReq_argument(self)




    def req_argument(self):

        localctx = ROSParser.Req_argumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_req_argument)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187 
            self.req_field_type()
            self.state = 188 
            self.req_field_name()
            self.state = 191
            _la = self._input.LA(1)
            if _la==ROSParser.T__11:
                self.state = 189
                self.match(self.T__11)
                self.state = 190 
                self.req_field_value()


            self.state = 193
            self.match(self.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ResponseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSParser.ResponseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def res_argument(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ROSParser.Res_argumentContext)
            else:
                return self.getTypedRuleContext(ROSParser.Res_argumentContext,i)


        def getRuleIndex(self):
            return ROSParser.RULE_response

        def enterRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.enterResponse(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.exitResponse(self)




    def response(self):

        localctx = ROSParser.ResponseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_response)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.match(self.T__6)
            self.state = 196
            self.match(self.T__16)
            self.state = 200
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ROSParser.ID:
                self.state = 197 
                self.res_argument()
                self.state = 202
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 203
            self.match(self.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Res_argumentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ROSParser.Res_argumentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def res_field_value(self):
            return self.getTypedRuleContext(ROSParser.Res_field_valueContext,0)


        def res_field_name(self):
            return self.getTypedRuleContext(ROSParser.Res_field_nameContext,0)


        def res_field_type(self):
            return self.getTypedRuleContext(ROSParser.Res_field_typeContext,0)


        def getRuleIndex(self):
            return ROSParser.RULE_res_argument

        def enterRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.enterRes_argument(self)

        def exitRule(self, listener):
            if isinstance( listener, ROSListener ):
                listener.exitRes_argument(self)




    def res_argument(self):
